Estoy en desarrollo y agrego nuevas cosas

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Web</title>
+    <title>Sistemas de Versiones</title>
 </head>
 <body>
     <h1>Sistema de control de versiones</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum 
+        odit, doloremque quasi illum perspiciatis minima laborum possimus eos iure
+         molestias et corrupti earum minus cumque iusto ullam aliquam quod nihil.</p>
+         <h2>Comandos de Configuracion</h2>
+         <ul>
+            <li>git config --global user.name</li>
+            <li>git config --global user.email</li>
+         </ul>
 </body>
 </html>
