--- a/pagina.html
+++ b/pagina.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>VETCLINIC</title>
 <!-- CSS only -->
 <link  rel="stylesheet" href="./css/bootstrap01.min.css" width="250px" hight="150px"></style>
 <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/carousel/">
