Se agrego una barra de nabegacion para cambiar de pagina en pagina

--- a/pagina.html
+++ b/pagina.html
@@ -13,6 +13,13 @@
   <center><u><h1 >BIENVENIDOS A TU CLINICA DE CONFIANZA</h1></u></center>
     <form>
 
+      <nav class="nav">
+        <a class="nav-link active" aria-current="page" href="#">Active</a>
+        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link disabled">Disabled</a>
+      </nav>
+
 
   <center><em><p><POR ESTE MEDIO TE DAMOS LA BIENVENIDA A NUESTRO CONSULTORIO<br>
    DONDE TE GARANTIZAMOS LOS CUIDADOS, ATENCION COMO SE MERECE NUESTRO AMIGO FIEL<br>
