--- a/pagina.html
+++ b/pagina.html
@@ -15,9 +15,10 @@
 
       <nav class="nav">
         <a class="nav-link active" aria-current="page" href="#">Active</a>
-        <a class="nav-link" href="#">Link</a>
-        <a class="nav-link" href="#">Link</a>
-        <a class="nav-link disabled">Disabled</a>
+        <a class="nav-link" href="#">Servicios</a>
+        <a class="nav-link" href="#">Quienes Somos</a>
+        <a class="nav-link" href="#">Contactos</a>
+        <a class="nav-link" href="#">Blog</a>
       </nav>
 
 
