Se cambiaron los menus para poder interactuar mas

--- a/pagina.html
+++ b/pagina.html
@@ -14,11 +14,11 @@
     <form>
 
       <nav class="nav">
-        <a class="nav-link active" aria-current="page" href="#">Active</a>
+        <a class="nav-link active" aria-current="page" href="#">Menu</a>
         <a class="nav-link" href="#">Servicios</a>
         <a class="nav-link" href="#">Quienes Somos</a>
         <a class="nav-link" href="#">Contactos</a>
-        <a class="nav-link" href="#">Blog</a>
+
       </nav>
 
 
