--- a/pagina.html
+++ b/pagina.html
@@ -15,11 +15,12 @@
 
       <nav class="nav">
         <a class="nav-link active" aria-current="page" href="#">Menu</a>
-        <a class="nav-link" href="#">Servicios</a>
+        <a class="nav-link" href="servicios.html">Servicios</a> 
         <a class="nav-link" href="#">Quienes Somos</a>
         <a class="nav-link" href="#">Contactos</a>
 
       </nav>
+
 
 
   <center><em><p><POR ESTE MEDIO TE DAMOS LA BIENVENIDA A NUESTRO CONSULTORIO<br>
