--- a/pagina.html
+++ b/pagina.html
@@ -15,7 +15,7 @@
 
       <nav class="nav">
         <a class="nav-link active" aria-current="page" href="#">Menu</a>
-        <a class="nav-link" href="servicios.html">Servicios</a> 
+        <a class="nav-link" href="nosotros.html">NOSOTROS</a> 
         <a class="nav-link" href="#">Quienes Somos</a>
         <a class="nav-link" href="#">Contactos</a>
 
