--- a/nosotros.html
+++ b/nosotros.html
@@ -7,11 +7,13 @@
     <title>VETCLINIC</title>
 </head>
 <body>
-    <center><u><h1 >BIENVENIDOS A TU CLINICA DE CONFIANZA</h1></u></center>
+    <center><u><h1 >SOBRE NOSOTROS</h1></u></center>
     <div class="container text-center">
         <div class="row align-items-start">
           <div class="col">
-            One of three columns
+            DR.VALERIA LAICA
+            Medica veterinaria
+            <img src="./image/logo.png" class="d-block w-100" alt="imagen 01" width="150px" height="550px">
           </div>
           <div class="col">
             One of three columns
