se agrego un titulo y acerca de nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -13,8 +13,9 @@
           <div class="col">
             DR.VALERIA LAICA
             Medica veterinaria
-            <img src="./image/logo.png" class="d-block w-100" alt="imagen 01" width="150px" height="550px">
           </div>
+        <div><img src="./image/logo.png" class="d-block w-100" alt="imagen 01" width="150px" height="550px"></div>
+
           <div class="col">
             One of three columns
           </div>
