--- a/nosotros.html
+++ b/nosotros.html
@@ -10,11 +10,17 @@
     <center><u><h1 >SOBRE NOSOTROS</h1></u></center>
     <div class="container text-center">
         <div class="row align-items-start">
-          <div class="col">
+          <div class="col"></div>
             DR.VALERIA LAICA
-            Medica veterinaria
-          </div>
+            <div>Medica veterinaria</div>
         <div><img src="./image/logo.png" class="d-block w-100" alt="imagen 01" width="70px" height="70px"></div>
+        Misión
+        <p>="padding-left: 20px; padding-right: 20px"
+            Brindar un servicio de calidad a través de la actualización constante que demanda la medicina veterinaria y 
+            fomentar el amor, cuidado y bienestar de las mascotas, garantizando una atención integral las 24 horas, 
+            los 365 días del año.</p>
+
+
 
           <div class="col">
             One of three columns
