se se modifico el parrafo

--- a/nosotros.html
+++ b/nosotros.html
@@ -11,15 +11,15 @@
     <div class="container text-center">
         <div class="row align-items-start">
           <div class="col"></div>
-            DR.VALERIA LAICA
-            <div>Medica veterinaria</div>
-        <div><img src="./image/logo.png" class="d-block w-100" alt="imagen 01" width="70px" height="70px"></div>
-        Misión
-        <p>="padding-left: 20px; padding-right: 20px"
+            <center> DR.VALERIA LAICA</center>
+            <center><div>Medica veterinaria</div></center>
+        <center><div><img src="./image/logo.png" class="d-block w-100" alt="imagen 01" width="70px" height="70px"></div></center>
+        <center>Misión</center>
+        <p>
             Brindar un servicio de calidad a través de la actualización constante que demanda la medicina veterinaria y 
             fomentar el amor, cuidado y bienestar de las mascotas, garantizando una atención integral las 24 horas, 
-            los 365 días del año.</p>
-
+            los 365 días del año.
+        </p>
 
 
           <div class="col">
