se modifico el parrafo

--- a/nosotros.html
+++ b/nosotros.html
@@ -15,11 +15,11 @@
             <center><div>Medica veterinaria</div></center>
         <center><div><img src="./image/logo.png" class="d-block w-100" alt="imagen 01" width="70px" height="70px"></div></center>
         <center>Misión</center>
-        <p>
+        <center><p>
             Brindar un servicio de calidad a través de la actualización constante que demanda la medicina veterinaria y 
             fomentar el amor, cuidado y bienestar de las mascotas, garantizando una atención integral las 24 horas, 
             los 365 días del año.
-        </p>
+        </p></center>
 
 
           <div class="col">
