se agrego otro parrafo

--- a/nosotros.html
+++ b/nosotros.html
@@ -20,11 +20,12 @@
             fomentar el amor, cuidado y bienestar de las mascotas, garantizando una atención integral las 24 horas, 
             los 365 días del año.
         </p></center>
-
-
           <div class="col">
-            One of three columns
-          </div>
+            <center> Visión </center></div>
+        <div><center>
+            Ser capaces de enfrentar y superar los retos de una profesión que cada día demanda más empeño, compromiso y sacrificio, 
+            creando así un liderazgo en la atención veterinaria de las pequeñas especies.
+        </div></center>  
           <div class="col">
             One of three columns
           </div>
