se agrego otro parrafo

--- a/nosotros.html
+++ b/nosotros.html
@@ -14,14 +14,14 @@
             <center> DR.VALERIA LAICA</center>
             <center><div>Medica veterinaria</div></center>
         <center><div><img src="./image/logo.png" class="d-block w-100" alt="imagen 01" width="70px" height="70px"></div></center>
-        <center>Misión</center>
+        <center><b>Misión</b></center>
         <center><p>
             Brindar un servicio de calidad a través de la actualización constante que demanda la medicina veterinaria y 
             fomentar el amor, cuidado y bienestar de las mascotas, garantizando una atención integral las 24 horas, 
             los 365 días del año.
         </p></center>
           <div class="col">
-            <center> Visión </center></div>
+            <center><b>Visión</b></center></div>
         <div><center>
             Ser capaces de enfrentar y superar los retos de una profesión que cada día demanda más empeño, compromiso y sacrificio, 
             creando así un liderazgo en la atención veterinaria de las pequeñas especies.
