se agregaron nuevas paginas para el sitio web y van a ser modificadas

--- a/pagina.html
+++ b/pagina.html
@@ -16,8 +16,10 @@
       <nav class="nav">
         <a class="nav-link active" aria-current="page" href="#">Menu</a>
         <a class="nav-link" href="nosotros.html">NOSOTROS</a> 
-        <a class="nav-link" href="#">Quienes Somos</a>
-        <a class="nav-link" href="#">Contactos</a>
+        <a class="nav-link" href="servicios.html">SERVICIOS</a>
+        <a class="nav-link" href="vetshop.html">VETSHOP</a>
+        <a class="nav-link" href="galeria.html">GALERIA</a>
+        <a class="nav-link" href="contactos.html">CONTACTOS</a>
 
       </nav>
 
