se agrego un fondo a la pagina

--- a/nosotros.html
+++ b/nosotros.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VETCLINIC</title>
 </head>
-<body>
+<body background="image/fondo1.jpg"></body>
     <center><u><h1 >SOBRE NOSOTROS</h1></u></center>
     <div class="container text-center">
         <div class="row align-items-start">
@@ -26,8 +26,6 @@
             Ser capaces de enfrentar y superar los retos de una profesión que cada día demanda más empeño, compromiso y sacrificio, 
             creando así un liderazgo en la atención veterinaria de las pequeñas especies.
         </div></center>  
-          <div class="col">
-            One of three columns
           </div>
         </div>
       </div>
