se modifico la pagina de servicios

--- a/servicios.html
+++ b/servicios.html
@@ -19,7 +19,7 @@
                     </div>
                   </div>
             </div>
-           <center> <div class="col-3">
+            <div class="col-3">
               <div class="card" style="width: 18rem;">
                   <div class="card-body">
                     <h5 class="card-title">EMERGENCIA</h5>
@@ -28,7 +28,7 @@
                       emergencia o urgencia médica, garantizando una atención oportuna y eficaz al servicio de nuestros amigos.</p>
                   </div>
                 </div>
-          </div></center>
+          </div>
           
           <div class="col-3">
             <div class="card" style="width: 18rem;">
