se modifico la pagina de servicios

--- a/servicios.html
+++ b/servicios.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><b>SERVICIOS</b></title>
+    <!-- CSS only -->
+<link  rel="stylesheet" href="./css/bootstrap01.min.css" width="250px" hight="150px"></style>
 </head>
 <body  background="image/fondo1.jpg"></body>
     <div class="container">
