--- a/servicios.html
+++ b/servicios.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><b>SERVICIOS</b></title>
+    <center><title><b>SERVICIOS</b></title></center>
+
     <!-- CSS only -->
 <link  rel="stylesheet" href="./css/bootstrap01.min.css" width="250px" hight="150px"></style>
 </head>
