se modifico el titulo de la pagina de servicios

--- a/servicios.html
+++ b/servicios.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <center><title><b>SERVICIOS</b></title></center>
+    <center><title>SERVICIOS</title></center>
 
     <!-- CSS only -->
 <link  rel="stylesheet" href="./css/bootstrap01.min.css" width="250px" hight="150px"></style>
 </head>
 <body  background="image/fondo1.jpg"></body>
+<center><u><h1 >SERVICIOS PARA TU PELUDITO</h1></u></center>
     <div class="container">
         <div class="row">
             <div class="col-3">
