--- a/vetshop.html
+++ b/vetshop.html
@@ -8,7 +8,9 @@
         <!-- CSS only -->
 <link  rel="stylesheet" href="./css/bootstrap01.min.css" width="250px" hight="150px"></style>
 </head>
-<body>
+<bodybackground="image/fondo1.jpg"></body>
+<center><u><h1 >TODO PARA CONSENTIR A TU PELUDITO </h1></u></center>
+
     <div class="container">
         <div class="row">
             <div class="col-3">
