se centro las imagenes y los parrafos

--- a/vetshop.html
+++ b/vetshop.html
@@ -11,7 +11,7 @@
 <body background="image/fondo1.jpg"></body>
 <center><u><h1 >TODO PARA CONSENTIR A TU PELUDITO </h1></u></center>
 
-    <div class="container">
+    <center><div class="container">
         <div class="row">
             <div class="col-3">
                 <div class="card" style="width: 18rem;">
@@ -52,6 +52,6 @@
         </div>
       </div>
     </div>
-    
+</center>
 </body>
 </html>
