--- a/pagina.html
+++ b/pagina.html
@@ -18,7 +18,7 @@
         <a class="nav-link" href="nosotros.html">NOSOTROS</a> 
         <a class="nav-link" href="servicios.html">SERVICIOS</a>
         <a class="nav-link" href="vetshop.html">VETSHOP</a>
-        <a class="nav-link" href="galeria.html">GALERIA</a>
+        <a class="nav-link" href="formulario.html">FORMULARIO</a>
         <a class="nav-link" href="contactos.html">CONTACTOS</a>
 
       </nav>
