se agrego un formulario para llenar el carnet y se puso fonod a la pagina de contactos

--- a/contactos.html
+++ b/contactos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONTACTOS</title>
 </head>
-<body>
+<body background="image/fondo1.jpg"></body>
     <div class="elementor-widget-container">
         <h2 class="elementor-heading-title elementor-size-default">Contáctanos</h2>		</div>
           </div>
