--- a/formulario.html
+++ b/formulario.html
@@ -37,5 +37,8 @@
      <input type="number" name="" id="edad"> 
     
     <button>¡¡ACEPTAR!!!</button> <br> <br>
+
+    <center><img src="image/perros.jpg" width="400px" height="200px"><br><br>
+        
 </body>
 </html>
