--- a/formulario.html
+++ b/formulario.html
@@ -9,7 +9,7 @@
 <body background="image/fondo1.jpg"></body>
 <center><u><h1 >FORMULARIO PARA GENERAR EL CARNET DE TU MASCOTA</h1></u></center>
 
-<center><img src="image/perros.jpg" width="550px" height="300px"><br><br>
+<center><img src="image/perros.jpg" width="550px" height="300px"><br><br></center>
 
 
     <a id="Formulario"><li>Formulario</li></a>
