--- a/contactos.html
+++ b/contactos.html
@@ -7,6 +7,10 @@
     <title>CONTACTOS</title>
 </head>
 <body background="image/fondo1.jpg"></body>
+<center><u><h1 >¡¡ DONDE PUEDES ENCONTRARNOS !!</h1></u></center>
+
+<img src="./image/logo.png" class="d-block w-100" alt="imagen 01" width="150px" height="550px">
+
     <div class="elementor-widget-container">
         <h2 class="elementor-heading-title elementor-size-default">Contáctanos</h2>		</div>
           </div>
