SE CAMBIO EL LOGO EN LOS CONTACTOS x3

--- a/contactos.html
+++ b/contactos.html
@@ -9,7 +9,7 @@
 <body background="image/fondo1.jpg"></body>
 <center><u><h1 >¡¡ DONDE PUEDES ENCONTRARNOS !!</h1></u></center>
 
-<img src="./image/logo.png" class="d-block w-100" alt="imagen 01" width="150px" height="550px">
+<center><img src="./image/logo.png"></center>
 
     <div class="elementor-widget-container">
         <h2 class="elementor-heading-title elementor-size-default">Contáctanos</h2>		</div>
