ya esta la pagina de nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -11,8 +11,9 @@
     <div class="container text-center">
         <div class="row align-items-start">
           <div class="col"></div>
-            <center> DR.VALERIA LAICA</center>
+            <center> DRA. VALERIA LAICA</center>
             <center><div>Medica veterinaria</div></center>
+            
         <center><div><img src="./image/dra.jpg" class="d-block w-100" alt="imagen 01" width="300px" height="300px"></div></center>
         <center><b>Misión</b></center>
         <center><p>
